--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "matto1990/lastfm-api",
+    "name": "deanx/lastfm-api",
     "description": "Last.fm webservice client",
     "keywords": [
         "last.fm",
@@ -17,6 +17,10 @@
         {
             "name": "Marcos",
             "email": "devilcius@gmail.com"
+        },
+        {
+            "name": "Alex",
+            "email": "alex@deanx.com.br"
         }
     ],
     "require": {
